--- a/index.html
+++ b/index.html
@@ -175,28 +175,28 @@
     ];
 
     const moodParts = {
-      "🖕": ["дерзко", "дерзко", "дерзкий"],
-      "👍": ["позитивно", "позитивно", "позитивный"],
-      "🔥": ["огненно", "огненно", "огненный"],
-      "👎": ["высадно", "высадно", "высадный"],
-      "😐": ["спокойно", "спокойно", "спокойный"],
-      "😂": ["весело", "весело", "весёлый"],
-      "😢": ["грустно", "грустно", "грустный"],
-      "😎": ["стильно", "стильно", "стильный"],
-      "😍": ["влюблённо", "влюблённо", "влюблённый"],
-      "🤯": ["шокирующе", "шокирующе", "шокирующий"],
-      "😴": ["сонно", "сонно", "сонный"],
-      "🤡": ["клоунско", "клоунско", "клоунский"],
-      "🥳": ["празднично", "празднично", "праздничный"],
-      "🤢": ["тошнотворно", "тошнотворно", "тошнотворный"],
-      "🥶": ["ледяно", "ледяно", "ледяной"],
-      "🤖": ["роботически", "роботически", "роботический"],
-      "👻": ["призрачно", "призрачно", "призрачный"],
-      "🌈": ["радужно", "радужно", "радужный"],
-      "🌞": ["солнечно", "солнечно", "солнечный"],
-      "💀": ["смертельно", "смертельно", "смертельный"],
-      "☀️": ["летне", "летне", "летний"],
-      "🌧️": ["дождливо", "дождливо", "дождливый"]
+      "🖕": ["дерзко", "дерзко", "дерзкое"],
+      "👍": ["позитивно", "позитивно", "позитивное"],
+      "🔥": ["огненно", "огненно", "огненное"],
+      "👎": ["высадно", "высадно", "высадное"],
+      "😐": ["спокойно", "спокойно", "спокойное"],
+      "😂": ["весело", "весело", "весёлое"],
+      "😢": ["грустно", "грустно", "грустное"],
+      "😎": ["стильно", "стильно", "стильное"],
+      "😍": ["влюблённо", "влюблённо", "влюблённое"],
+      "🤯": ["шокирующе", "шокирующе", "шокирующее"],
+      "😴": ["сонно", "сонно", "сонное"],
+      "🤡": ["клоунско", "клоунско", "клоунское"],
+      "🥳": ["празднично", "празднично", "праздничное"],
+      "🤢": ["тошнотворно", "тошнотворно", "тошнотворное"],
+      "🥶": ["ледяно", "ледяно", "ледяное"],
+      "🤖": ["роботически", "роботически", "роботическое"],
+      "👻": ["призрачно", "призрачно", "призрачное"],
+      "🌈": ["радужно", "радужно", "радужное"],
+      "🌞": ["солнечно", "солнечно", "солнечное"],
+      "💀": ["смертельно", "смертельно", "смертельное"],
+      "☀️": ["летне", "летне", "летнее"],
+      "🌧️": ["дождливо", "дождливо", "дождливое"]
     };
 
     const slotEls = [
