--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     body {
-      background: #fff;
+      background: linear-gradient(to bottom, #c0c0c0, #808080); /* Серо-серебряный по умолчанию */
       color: #111;
       font-family: monospace, Arial, sans-serif;
       display: flex;
       flex-direction: column;
       align-items: center;
-      margin-top: 5vw;
+      margin: 0;
+      height: 100vh;
+      overflow: hidden;
+      transition: background 0.8s;
     }
     h1 {
       letter-spacing: 1.5px;
@@ -111,10 +114,19 @@
       font-size: 1.1em;
       letter-spacing: 1px;
       min-height: 1em;
-      color: #111;
+      color: #fff;
+      background: rgba(30,30,30,0.85);
+      border-radius: 14px;
+      padding: 0.5em 1.1em;
+      box-shadow: 0 2px 14px 0 rgba(0,0,0,0.14), 0 1.5px 3px 0 rgba(0,0,0,0.08);
       text-align: center;
       text-transform: capitalize;
-      display: block;
+      display: inline-block;
+      font-weight: bold;
+      border: 2px solid rgba(255,255,255,0.35);
+      /* For better readability on colored backgrounds */
+      text-shadow: 0 1px 5px #222, 0 0 4px #000, 0 0 2px #fff;
+      transition: background 0.3s, color 0.3s;
     }
     .credits {
       position: fixed;
@@ -122,36 +134,6 @@
       right: 8px;
       font-size: 0.9em;
       color: #bbb;
-    }
-
-    /* Адаптив для мобильных */
-    @media (max-width: 1200px) {
-      .slots {
-        gap: 2vw;
-      }
-      .slot {
-        width: 120px;
-        height: 120px;
-        font-size: 3em;
-      }
-      .result {
-          margin-top: 1vw;
-          font-size: 1.4em;
-      }
-      button {
-        padding: 20px 56px;
-        font-size: 1.5em;
-      }
-      h1 {
-        font-size: 2em;
-        margin-bottom: 4vw;
-      }
-      .btn-container {
-        bottom: 32px;
-      }
-      .credits {
-        font-size: 0.8em;
-      }
     }
   </style>
 </head>
@@ -165,7 +147,7 @@
   <div class="btn-container">
     <button id="spin">Чпок</button>
   </div>
-  <div class="result" id="result"></div>
+  <div class="result" id="result"Твое настроение...></div>
   <div class="credits">by KirillOlegovichH</div>
   <script>
     const emojis = [
@@ -173,6 +155,32 @@
       "😍", "🤯", "😴", "🤡", "🥳", "🤢", "🤖", "👻", "🌈",
       "🌞", "💀", "☀️", "🌧️"
     ];
+
+    // Цвета для каждого эмодзи (отдельно от moodParts для удобства парсинга)
+    const emojiGradients = {
+      "🖕": ["#ff4b2b", "#ff416c"],
+      "👍": ["#00c9ff", "#92fe9d"],
+      "🔥": ["#f83600", "#f9d423"],
+      "👎": ["#bdc3c7", "#2c3e50"],
+      "😐": ["#eef2f3", "#8e9eab"],
+      "😂": ["#f7971e", "#ffd200"],
+      "😢": ["#616161", "#9bc5c3"],
+      "😎": ["#3a6186", "#89253e"],
+      "😍": ["#ff758c", "#ff7eb3"],
+      "🤯": ["#7f00ff", "#e100ff"],
+      "😴": ["#355c7d", "#6c5b7b"],
+      "🤡": ["#ffe000", "#799f0c"],
+      "🥳": ["#f3904f", "#3b4371"],
+      "🤢": ["#56ab2f", "#a8e063"],
+      "🥶": ["#00c6ff", "#0072ff"],
+      "🤖": ["#434343", "#000000"],
+      "👻": ["#a8edea", "#fed6e3"],
+      "🌈": ["#ff9a9e", "#fad0c4"],
+      "🌞": ["#fbc2eb", "#a6c1ee"],
+      "💀": ["#000000", "#434343"],
+      "☀️": ["#ffecd2", "#fcb69f"],
+      "🌧️": ["#2b5876", "#4e4376"]
+    };
 
     const moodParts = {
       "🖕": ["дерзко", "дерзко", "дерзкое"],
@@ -212,7 +220,7 @@
     }
 
     function spinSlots() {
-      resultEl.textContent = '';
+      resultEl.textContent = 'Твое настроение...';
       spinBtn.classList.add('hidden');
       burstEmojisFromButton();
       slotEls.forEach(slot => {
@@ -235,6 +243,7 @@
             slot.classList.add('finished');
             slot.style.filter = "none";
           });
+          updateBackground(slotsRes);
           showResult(slotsRes);
           setTimeout(() => {
             spinBtn.classList.remove('hidden');
@@ -243,22 +252,38 @@
       }, 60);
     }
 
+    // Фон из всех цветов градиентов слотов (по 2 цвета от каждого)
+    function updateBackground(arr) {
+      const body = document.body;
+      // Собираем массив всех цветов (по 2 цвета от каждого эмодзи)
+      let colors = [];
+      arr.forEach(e => {
+        if (emojiGradients[e]) {
+          colors.push(...emojiGradients[e]);
+        }
+      });
+      // Если есть совпадающие эмодзи, не дублируем цвета
+      colors = [...new Set(colors)];
+      // Если не найдено цветов (на всякий случай), ставим дефолт
+      if (!colors.length) {
+        body.style.background = "linear-gradient(to bottom, #c0c0c0, #808080)";
+        return;
+      }
+      // Делаем плавный градиент по всем цветам слева направо
+      body.style.background = `linear-gradient(120deg, ${colors.join(", ")})`;
+    }
+
     function showResult(arr) {
       let moodPhrase = "";
       if (arr[0] === arr[1] && arr[1] === arr[2]) {
-        // Все три одинаковые
         moodPhrase = `Очень ${moodParts[arr[0]][2]}`;
       } else if (arr[0] === arr[1]) {
-        // Первый и средний одинаковые
         moodPhrase = `Очень ${moodParts[arr[0]][0]}-${moodParts[arr[2]][2]}`;
       } else if (arr[0] === arr[2]) {
-        // Первый и последний одинаковые
         moodPhrase = `Очень ${moodParts[arr[2]][0]}-${moodParts[arr[1]][2]}`;
       } else if (arr[1] === arr[2]) {
-        // Средний и последний одинаковые
         moodPhrase = `Очень ${moodParts[arr[2]][0]}-${moodParts[arr[0]][2]}`;
       } else {
-        // Все слоты разные
         moodPhrase = `${moodParts[arr[0]][0]}-${moodParts[arr[1]][1]}-${moodParts[arr[2]][2]}`;
       }
       resultEl.textContent = moodPhrase;
