--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
   <div class="btn-container">
     <button id="spin">Чпок</button>
   </div>
-  <div class="result" id="result"Твое настроение...></div>
+  <div class="result" id="result">Твое настроение...</div>
   <div class="credits">by KirillOlegovichH</div>
   <script>
     const emojis = [
