--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
     .btn-container {
       position: fixed;
       left: 50%;
-      transform: translateX(-50%);
+      top: 150px;
+      transfrm: translateX(-50%);
       bottom: 100px;
       display: flex;
       justify-content: center;
