--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      margin: 0;
+      margin: 20% 0 0 0;
       height: 100vh;
       overflow: hidden;
       transition: background 0.8s;
@@ -53,7 +53,6 @@
     .btn-container {
       position: fixed;
       left: 50%;
-      top: 150px;
       transfrm: translateX(-50%);
       bottom: 100px;
       display: flex;
