--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
     }
     .btn-container {
       position: fixed;
+      text-align: center;
       left: 0%;
       transfrm: translateX(-50%);
       bottom: 100px;
