--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       justify-content: center;
       align-items: center;
       margin-bottom: 0;
-      width: max-content;
+      width: 100%;
       height: max-content;
       z-index: 10;
       pointer-events: none;
