--- a/index.html
+++ b/index.html
@@ -160,6 +160,8 @@
     // Цвета для каждого эмодзи (отдельно от moodParts для удобства парсинга)
     const emojiGradients = {
       "🖕": ["#ff4b2b", "#ff416c"],
+      "🎶": ["#ffe000", "#799f0c"],
+      "🚘": ["#f83600", "#f9d423"],
       "👍": ["#00c9ff", "#92fe9d"],
       "🔥": ["#f83600", "#f9d423"],
       "👎": ["#bdc3c7", "#2c3e50"],
@@ -185,6 +187,8 @@
 
     const moodParts = {
       "🖕": ["дерзко", "дерзко", "дерзкое"],
+      "🎶": ["музыкально", "музыкально", "музыкальное"],
+      "🚘": ["автомобильно", "автомобильно", "автомоб"ильное"],
       "👍": ["позитивно", "позитивно", "позитивное"],
       "🔥": ["огненно", "огненно", "огненное"],
       "👎": ["высадно", "высадно", "высадное"],
