--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
     const moodParts = {
       "🖕": ["дерзко", "дерзко", "дерзкое"],
       "🎶": ["музыкально", "музыкально", "музыкальное"],
-      "🚘": ["автомобильно", "автомобильно", "автомоб"ильное"],
+      "🚘": ["автомобильно", "автомобильно", "автомобильное"],
       "👍": ["позитивно", "позитивно", "позитивное"],
       "🔥": ["огненно", "огненно", "огненное"],
       "👎": ["высадно", "высадно", "высадное"],
