--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
   <div class="credits">by KirillOlegovichH</div>
   <script>
     const emojis = [
-      "🖕", "🎶", "🚘", "👍", "🔥", "👎", "😐", "😂", "😢", "😎",
+      "🖕", "💼", "🎶", "🚘", "👍", "🔥", "👎", "😐", "😂", "😢", "😎",
       "😍", "🤯", "😴", "🤡", "🥳", "🤢", "🤖", "👻", "🌈",
       "🌞", "💀", "☀️", "🌧️"
     ];
@@ -160,6 +160,7 @@
     // Цвета для каждого эмодзи (отдельно от moodParts для удобства парсинга)
     const emojiGradients = {
       "🖕": ["#ff4b2b", "#ff416c"],
+      "💼": ["#ff1b2b", "#ff116c"],
       "🎶": ["#ffe000", "#799f0c"],
       "🚘": ["#f83600", "#f9d423"],
       "👍": ["#00c9ff", "#92fe9d"],
@@ -187,6 +188,7 @@
 
     const moodParts = {
       "🖕": ["дерзко", "дерзко", "дерзкое"],
+      "💼": ["дерзко", "дерзко", "дерзкое"],
       "🎶": ["музыкально", "музыкально", "музыкальное"],
       "🚘": ["автомобильно", "автомобильно", "автомобильное"],
       "👍": ["позитивно", "позитивно", "позитивное"],
