--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 
     const moodParts = {
       "🖕": ["дерзко", "дерзко", "дерзкое"],
-      "💼": ["дерзко", "дерзко", "дерзкое"],
+      "💼": ["рабоче", "рабоче", "рабочее"],
       "🎶": ["музыкально", "музыкально", "музыкальное"],
       "🚘": ["автомобильно", "автомобильно", "автомобильное"],
       "👍": ["позитивно", "позитивно", "позитивное"],
