--- a/index.html
+++ b/index.html
@@ -154,7 +154,20 @@
     const emojis = [
       "🖕", "💼", "🎶", "🚘", "👍", "🔥", "👎", "😐", "😂", "😢", "😎",
       "😍", "🤯", "😴", "🤡", "🥳", "🤢", "🤖", "👻", "🌈",
-      "🌞", "💀", "☀️", "🌧️"
+      "🌞", "💀", "☀️", "🌧️", "🥶", "😤", "🤗", "😱", "🙄", "🤤",
+      "😈", "👺", "🤠", "🥺", "😇", "🤓", "🧐", "🤪", "🥴", "🤮",
+      "🤑", "🤫", "🤭", "😵", "🥱", "🤒", "🤕", "😷", "🤧", "🥸",
+      "🤥", "😪", "😖", "😫", "😩", "🥳", "🤩", "🥰", "😋", "🤨",
+      "😏", "😒", "😞", "😔", "😟", "😕", "🙁", "☹️", "😣", "😖",
+      "😦", "😧", "😨", "😰", "😥", "😢", "😭", "😤", "😠", "😡",
+      "🤬", "🤯", "😳", "🥵", "🥶", "😶", "😑", "😬", "🙄", "😯",
+      "😲", "😴", "🤤", "😪", "😮", "😛", "😜", "🤪", "😝", "🤑",
+      "🤗", "🤭", "🤫", "🤔", "🤐", "🤨", "😐", "😑", "😶", "😏",
+      "😒", "🙄", "😬", "🤥", "😌", "😔", "😪", "🤤", "😴", "😷",
+      "🤒", "🤕", "🤢", "🤮", "🤧", "🥵", "🥶", "🥴", "😵", "🤯",
+      "🤠", "🥳", "🥸", "😎", "🤓", "🧐", "😕", "😟", "🙁", "☹️",
+      "😮", "😯", "😲", "😳", "🥺", "😦", "😧", "😨", "😰", "😥",
+      "😢", "😭", "😱", "😖", "😣", "😞", "😓", "😩", "😫", "🥱"
     ];
 
     // Цвета для каждого эмодзи (отдельно от moodParts для удобства парсинга)
@@ -183,7 +196,72 @@
       "🌞": ["#fbc2eb", "#a6c1ee"],
       "💀": ["#000000", "#434343"],
       "☀️": ["#ffecd2", "#fcb69f"],
-      "🌧️": ["#2b5876", "#4e4376"]
+      "🌧️": ["#2b5876", "#4e4376"],
+      "😤": ["#ff6b6b", "#ee5a24"],
+      "🤗": ["#ffeaa7", "#fdcb6e"],
+      "😱": ["#fd79a8", "#e84393"],
+      "🙄": ["#636e72", "#2d3436"],
+      "🤤": ["#74b9ff", "#0984e3"],
+      "😈": ["#a29bfe", "#6c5ce7"],
+      "👺": ["#e17055", "#d63031"],
+      "🤠": ["#fdcb6e", "#e17055"],
+      "🥺": ["#fab1a0", "#e17055"],
+      "😇": ["#ddd", "#f1f2f6"],
+      "🤓": ["#00b894", "#00a085"],
+      "🧐": ["#74b9ff", "#0984e3"],
+      "🤪": ["#fd79a8", "#fdcb6e"],
+      "🥴": ["#a29bfe", "#6c5ce7"],
+      "🤮": ["#00b894", "#55a3ff"],
+      "🤑": ["#fdcb6e", "#f39c12"],
+      "🤫": ["#636e72", "#2d3436"],
+      "🤭": ["#fab1a0", "#e17055"],
+      "😵": ["#636e72", "#2d3436"],
+      "🥱": ["#ddd", "#b2bec3"],
+      "🤒": ["#fd79a8", "#e84393"],
+      "🤕": ["#fab1a0", "#e17055"],
+      "😷": ["#ddd", "#b2bec3"],
+      "🤧": ["#74b9ff", "#0984e3"],
+      "🥸": ["#fdcb6e", "#f39c12"],
+      "🤥": ["#fd79a8", "#e84393"],
+      "😪": ["#636e72", "#2d3436"],
+      "😖": ["#fd79a8", "#e84393"],
+      "😫": ["#a29bfe", "#6c5ce7"],
+      "😩": ["#fd79a8", "#e84393"],
+      "🤩": ["#fdcb6e", "#f39c12"],
+      "🥰": ["#fd79a8", "#e84393"],
+      "😋": ["#fdcb6e", "#f39c12"],
+      "🤨": ["#636e72", "#2d3436"],
+      "😏": ["#a29bfe", "#6c5ce7"],
+      "😒": ["#636e72", "#2d3436"],
+      "😞": ["#74b9ff", "#0984e3"],
+      "😔": ["#636e72", "#2d3436"],
+      "😟": ["#fd79a8", "#e84393"],
+      "😕": ["#636e72", "#2d3436"],
+      "🙁": ["#74b9ff", "#0984e3"],
+      "☹️": ["#636e72", "#2d3436"],
+      "😣": ["#fd79a8", "#e84393"],
+      "😦": ["#74b9ff", "#0984e3"],
+      "😧": ["#fd79a8", "#e84393"],
+      "😨": ["#a29bfe", "#6c5ce7"],
+      "😰": ["#74b9ff", "#0984e3"],
+      "😥": ["#636e72", "#2d3436"],
+      "😭": ["#74b9ff", "#0984e3"],
+      "😠": ["#ff6b6b", "#ee5a24"],
+      "😡": ["#e17055", "#d63031"],
+      "🤬": ["#e17055", "#d63031"],
+      "😳": ["#fd79a8", "#e84393"],
+      "🥵": ["#e17055", "#d63031"],
+      "😶": ["#ddd", "#b2bec3"],
+      "😑": ["#636e72", "#2d3436"],
+      "😬": ["#fdcb6e", "#f39c12"],
+      "😯": ["#74b9ff", "#0984e3"],
+      "😲": ["#a29bfe", "#6c5ce7"],
+      "😮": ["#74b9ff", "#0984e3"],
+      "😛": ["#fd79a8", "#e84393"],
+      "😜": ["#fdcb6e", "#f39c12"],
+      "😝": ["#00b894", "#55a3ff"],
+      "😌": ["#ddd", "#b2bec3"],
+      "😓": ["#636e72", "#2d3436"]
     };
 
     const moodParts = {
@@ -211,7 +289,72 @@
       "🌞": ["солнечно", "солнечно", "солнечное"],
       "💀": ["смертельно", "смертельно", "смертельное"],
       "☀️": ["летне", "летне", "летнее"],
-      "🌧️": ["дождливо", "дождливо", "дождливое"]
+      "🌧️": ["дождливо", "дождливо", "дождливое"],
+      "😤": ["раздражённо", "раздражённо", "раздражённое"],
+      "🤗": ["обнимательно", "обнимательно", "обнимательное"],
+      "😱": ["паникующе", "паникующе", "паникующее"],
+      "🙄": ["скептично", "скептично", "скептическое"],
+      "🤤": ["слюнявно", "слюнявно", "слюнявое"],
+      "😈": ["дьявольски", "дьявольски", "дьявольское"],
+      "👺": ["демонически", "демонически", "демоническое"],
+      "🤠": ["ковбойски", "ковбойски", "ковбойское"],
+      "🥺": ["умоляюще", "умоляюще", "умоляющее"],
+      "😇": ["ангельски", "ангельски", "ангельское"],
+      "🤓": ["ботански", "ботански", "ботанское"],
+      "🧐": ["подозрительно", "подозрительно", "подозрительное"],
+      "🤪": ["безумно", "безумно", "безумное"],
+      "🥴": ["пьяно", "пьяно", "пьяное"],
+      "🤮": ["блевотно", "блевотно", "блевотное"],
+      "🤑": ["жадно", "жадно", "жадное"],
+      "🤫": ["тихо", "тихо", "тихое"],
+      "🤭": ["застенчиво", "застенчиво", "застенчивое"],
+      "😵": ["ошарашенно", "ошарашенно", "ошарашенное"],
+      "🥱": ["зевающе", "зевающе", "зевающее"],
+      "🤒": ["больно", "больно", "больное"],
+      "🤕": ["травмированно", "травмированно", "травмированное"],
+      "😷": ["замаскированно", "замаскированно", "замаскированное"],
+      "🤧": ["чихающе", "чихающе", "чихающее"],
+      "🥸": ["инкогнито", "инкогнито", "инкогнито"],
+      "🤥": ["лживо", "лживо", "лживое"],
+      "😪": ["уставше", "уставше", "уставшее"],
+      "😖": ["мучительно", "мучительно", "мучительное"],
+      "😫": ["страдающе", "страдающе", "страдающее"],
+      "😩": ["измученно", "измученно", "измученное"],
+      "🤩": ["восхищённо", "восхищённо", "восхищённое"],
+      "🥰": ["влюблённо", "влюблённо", "влюблённое"],
+      "😋": ["вкусно", "вкусно", "вкусное"],
+      "🤨": ["недоверчиво", "недоверчиво", "недоверчивое"],
+      "😏": ["хитро", "хитро", "хитрое"],
+      "😒": ["уныло", "уныло", "унылое"],
+      "😞": ["расстроенно", "расстроенно", "расстроенное"],
+      "😔": ["печально", "печально", "печальное"],
+      "😟": ["обеспокоенно", "обеспокоенно", "обеспокоенное"],
+      "😕": ["озадаченно", "озадаченно", "озадаченное"],
+      "🙁": ["хмуро", "хмуро", "хмурое"],
+      "☹️": ["недовольно", "недовольно", "недовольное"],
+      "😣": ["мучительно", "мучительно", "мучительное"],
+      "😦": ["удивлённо", "удивлённо", "удивлённое"],
+      "😧": ["встревоженно", "встревоженно", "встревоженное"],
+      "😨": ["испуганно", "испуганно", "испуганное"],
+      "😰": ["потно", "потно", "потное"],
+      "😥": ["облегчённо", "облегчённо", "облегчённое"],
+      "😭": ["рыдающе", "рыдающе", "рыдающее"],
+      "😠": ["сердито", "сердито", "сердитое"],
+      "😡": ["ярость", "ярость", "яростное"],
+      "🤬": ["матерно", "матерно", "матерное"],
+      "😳": ["смущённо", "смущённо", "смущённое"],
+      "🥵": ["горячо", "горячо", "горячее"],
+      "😶": ["молчаливо", "молчаливо", "молчаливое"],
+      "😑": ["безэмоционально", "безэмоционально", "безэмоциональное"],
+      "😬": ["неловко", "неловко", "неловкое"],
+      "😯": ["ошеломлённо", "ошеломлённо", "ошеломлённое"],
+      "😲": ["потрясённо", "потрясённо", "потрясённое"],
+      "😮": ["изумлённо", "изумлённо", "изумлённое"],
+      "😛": ["дразняще", "дразняще", "дразнящее"],
+      "😜": ["подмигивающе", "подмигивающе", "подмигивающее"],
+      "😝": ["показывающе", "показывающе", "показывающее"],
+      "😌": ["умиротворённо", "умиротворённо", "умиротворённое"],
+      "😓": ["нервозно", "нервозно", "нервозное"]
     };
 
     const slotEls = [
