--- a/index.html
+++ b/index.html
@@ -8,17 +8,14 @@
   <style>
     /* Основные стили для body и фона */
     body {
-    background: linear-gradient(135deg, #cad4fd 0%, #222223 100%);
-    color: #2c3e50;
-    font-family: 'Segoe UI', 'Apple Color Emoji', sans-serif;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: auto 0;
-    height: 100vh;
-    overflow: hidden;
-    transition: background 1s ease;
-    justify-content: center;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin: 100px 0;
+      height: 100vh;
+      overflow: hidden;
+      transition: background 1s ease;
+      justify-content: flex-start;
       overflow: hidden;
       transition: background 1s ease;
     }
