--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <style>
     /* Основные стили для body и фона */
     body {
+      background: linear-gradient(135deg, #cad4fd 0%, #222223 100%);
+      color: #2c3e50;
+      font-family: 'Segoe UI', 'Apple Color Emoji', sans-serif;
       display: flex;
       flex-direction: column;
       align-items: center;
