--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
       background: linear-gradient(135deg, #cad4fd 0%, #222223 100%);
       color: #2c3e50;
       font-family: 'Segoe UI', 'Apple Color Emoji', sans-serif;
-      display: flex;
+      display: flex
+  ;
       flex-direction: column;
       align-items: center;
-      margin: 100px 0;
+      margin: 40px 0;
       height: 100vh;
       overflow: hidden;
       transition: background 1s ease;
@@ -30,8 +31,6 @@
       color: #ffffff;
       text-align: center;
       text-shadow: 0 2px 10px rgba(0,0,0,0.3);
-      max-width: 90vw;
-      word-wrap: break-word;
     }
     .slots {
       display: flex;
@@ -231,6 +230,21 @@
       font-size: 2em;
       filter: drop-shadow(0 2px 8px rgba(0,0,0,0.3));
     }
+    .mood-emoji .emoji-loader {
+      display: inline-block;
+      width: 44px;
+      height: 44px;
+      border: 4px solid rgba(255,255,255,0.3);
+      border-top: 4px solid #fff;
+      border-radius: 50%;
+      animation: emojiSpin 0.8s linear infinite;
+      vertical-align: middle;
+      margin: 0 auto;
+    }
+    @keyframes emojiSpin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
     .rarity-badge {
       display: inline-block;
       padding: 0.3em 0.8em;
@@ -369,12 +383,12 @@
         font-size: 1.2em;
       }
       .mood-emoji {
-        font-size: 1.6em;
+        font-size: 2.6em;
       }
       .slot {
-        width: 75px;
-        height: 75px;
-        font-size: 2.8em;
+        width: 100px;
+        height: 100px;
+        font-size: 3.6em;
       }
       button {
         width: 100px;
@@ -1025,12 +1039,6 @@
       mintButtonContainer.classList.remove('show');
       spinBtn.classList.add('hidden');
       burstEmojisFromButton();
-      // Очищаем emoji сразу
-      moodEmoji.innerHTML = '';
-
-      // Удаляем картинку/контент из moodEmoji сразу при spin
-      moodEmoji.innerHTML = '';
-
       // Сбрасываем состояние слотов
       slotEls.forEach(slot => {
         slot.classList.remove('finished');
@@ -1077,6 +1085,12 @@
       }, 65);
     }
 
+    // Очищаем emoji сразу
+      moodEmoji.innerHTML = '';
+
+      // Удаляем картинку/контент из moodEmoji сразу при spin
+      moodEmoji.innerHTML = '';
+
     // Обновление фона на основе эмодзи в слотах
     function updateBackground(arr) {
       const body = document.body;
@@ -1108,8 +1122,9 @@
         // 1. Для легендарных: отправляем запрос с короной
         moodPhrase = `Абсолютно ${obj0.moodParts[2]}!`;
         const emojiString = encodeURIComponent(arr[0] + '_👑');
-        const apiUrl = `https://emojik.vercel.app/s/${emojiString}?size=48`;
-        moodEmoji.innerHTML = '';
+        const apiUrl = `https://emojik.vercel.app/s/${emojiString}?size=64`;
+        // Показываем loader
+        moodEmoji.innerHTML = '<span class="emoji-loader"></span>';
         fetch(apiUrl).then(resp => {
           if (resp.ok) {
             moodEmoji.innerHTML = `<img src='${apiUrl}' alt='legendary' class='emoji-fusion' style='width:64px;height:64px;vertical-align:middle;'>`;
@@ -1160,11 +1175,13 @@
         let first = mainEmoji.moodParts[0].replace(/\s+/g, '');
         let second = extraEmoji.moodParts[2].replace(/\s+/g, '');
         first = first.charAt(0).toUpperCase() + first.slice(1);
-        moodPhrase = `Очень ${first}-${second}`;
+        second = second.charAt(0).toLowerCase() + second.slice(1);
+        moodPhrase = `Очень ${first} — ${second}`;
         const uniqueEmojisArr = Array.from(new Set(arr));
         const emojiString = uniqueEmojisArr.join('_');
-        const apiUrl = `https://emojik.vercel.app/s/${encodeURIComponent(emojiString)}?size=48`;
-        moodEmoji.innerHTML = '';
+        const apiUrl = `https://emojik.vercel.app/s/${encodeURIComponent(emojiString)}?size=64`;
+        // Показываем loader
+        moodEmoji.innerHTML = '<span class="emoji-loader"></span>';
         fetch(apiUrl).then(resp => {
           if (resp.ok) {
             isEpicApi = true;
