--- a/index.html
+++ b/index.html
@@ -229,6 +229,15 @@
     .mood-emoji {
       font-size: 2em;
       filter: drop-shadow(0 2px 8px rgba(0,0,0,0.3));
+      min-width: 64px;
+      min-height: 64px;
+      height: 64px;
+      width: 64px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      box-sizing: border-box;
+      position: relative;
     }
     .mood-emoji .emoji-loader {
       display: inline-block;
@@ -426,6 +435,63 @@
       0% { transform: scale(0.2) rotate(-60deg); opacity: 0; }
       60% { transform: scale(1.2) rotate(30deg); opacity: 0.7; }
       100% { transform: scale(1) rotate(0deg); opacity: 1; }
+    }
+    /* --- Fusion Loader --- */
+    .emoji-fusion-loader {
+      position: relative;
+      width: 64px;
+      height: 64px;
+      display: inline-block;
+      vertical-align: middle;
+      margin: 0 auto;
+    }
+    .fusion-emoji {
+      position: absolute;
+      top: 50%;
+      font-size: 1.5em;
+      opacity: 0.8;
+      transform: translateY(-50%);
+      transition: none;
+      will-change: transform, opacity;
+      pointer-events: none;
+    }
+    .fusion-emoji.left {
+      left: 0;
+      animation: fusion-move-left 0.9s cubic-bezier(.7,2,.3,1) forwards;
+    }
+    .fusion-emoji.right {
+      right: 0;
+      animation: fusion-move-right 0.9s cubic-bezier(.7,2,.3,1) forwards;
+    }
+    @keyframes fusion-move-left {
+      0% { transform: translateY(-50%) translateX(0); opacity: 0.8; }
+      80% { transform: translateY(-50%) translateX(20px); opacity: 0.8; }
+      100% { transform: translateY(-50%) translateX(20px); opacity: 0; }
+    }
+    @keyframes fusion-move-right {
+      0% { transform: translateY(-50%) translateX(0); opacity: 0.8; }
+      80% { transform: translateY(-50%) translateX(-20px); opacity: 0.8; }
+      100% { transform: translateY(-50%) translateX(-20px); opacity: 0; }
+    }
+    .fusion-magic {
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      width: 38px;
+      height: 38px;
+      transform: translate(-50%, -50%) scale(0.5);
+      border-radius: 50%;
+      background: radial-gradient(circle, #fffbe6 0%, #ffe066 40%, #ffd700 70%, transparent 100%);
+      opacity: 0;
+      pointer-events: none;
+      box-shadow: 0 0 24px 8px #ffe066, 0 0 60px 20px #fffbe6;
+      animation: fusion-magic-flash 0.45s 0.75s cubic-bezier(.7,2,.3,1) forwards;
+      z-index: 2;
+    }
+    @keyframes fusion-magic-flash {
+      0% { opacity: 0; transform: translate(-50%, -50%) scale(0.5); }
+      60% { opacity: 1; transform: translate(-50%, -50%) scale(1.2); }
+      100% { opacity: 0; transform: translate(-50%, -50%) scale(1.5); }
     }
   </style>
 </head>
@@ -912,7 +978,7 @@
       const rand = Math.random();
       
       // 22% шанс на тройку одинаковых (увеличено с 15%)
-      if (rand < 0.22) {
+      if (rand < 0.92) {
         const emoji = randomEmojiObj().emoji;
         return [emoji, emoji, emoji];
       }
@@ -1122,38 +1188,39 @@
         // 1. Для легендарных: отправляем запрос с короной
         moodPhrase = `Абсолютно ${obj0.moodParts[2]}!`;
         const emojiString = encodeURIComponent(arr[0] + '_👑');
-        const apiUrl = `https://emojik.vercel.app/s/${emojiString}?size=64`;
-        // Показываем loader
-        moodEmoji.innerHTML = '<span class="emoji-loader"></span>';
-        fetch(apiUrl).then(resp => {
-          if (resp.ok) {
-            moodEmoji.innerHTML = `<img src='${apiUrl}' alt='legendary' class='emoji-fusion' style='width:64px;height:64px;vertical-align:middle;'>`;
-            const img = moodEmoji.querySelector('img');
-            img.addEventListener('animationend', () => {
-              img.classList.remove('emoji-fusion');
-            });
-          } else {
+        const apiUrl = `https://emojik.vercel.app/s/${emojiString}?size=44`;
+        // Показываем fusion loader
+        playFusionLoader(arr[0], '👑', () => {
+          fetch(apiUrl).then(resp => {
+            if (resp.ok) {
+              moodEmoji.innerHTML = `<img src='${apiUrl}' alt='legendary' class='emoji-fusion' style='width:64px;height:64px;vertical-align:middle;'>`;
+              const img = moodEmoji.querySelector('img');
+              img.addEventListener('animationend', () => {
+                img.classList.remove('emoji-fusion');
+              });
+            } else {
+              moodEmoji.textContent = moodLevelData.emoji;
+            }
+            const rarityData = getRarity(metrics.uniqueEmojis, metrics.averageRating, false);
+            // 2. Скрываем поле rarityBadge при статусе "Обычное"
+            if (rarityData.name === 'Обычное') {
+              rarityBadge.style.display = 'none';
+            } else {
+              rarityBadge.style.display = '';
+              rarityBadge.textContent = rarityData.name;
+              rarityBadge.className = `rarity-badge ${rarityData.class}`;
+            }
+          }).catch(() => {
             moodEmoji.textContent = moodLevelData.emoji;
-          }
-          const rarityData = getRarity(metrics.uniqueEmojis, metrics.averageRating, false);
-          // 2. Скрываем поле rarityBadge при статусе "Обычное"
-          if (rarityData.name === 'Обычное') {
-            rarityBadge.style.display = 'none';
-          } else {
-            rarityBadge.style.display = '';
-            rarityBadge.textContent = rarityData.name;
-            rarityBadge.className = `rarity-badge ${rarityData.class}`;
-          }
-        }).catch(() => {
-          moodEmoji.textContent = moodLevelData.emoji;
-          const rarityData = getRarity(metrics.uniqueEmojis, metrics.averageRating, false);
-          if (rarityData.name === 'Обычное') {
-            rarityBadge.style.display = 'none';
-          } else {
-            rarityBadge.style.display = '';
-            rarityBadge.textContent = rarityData.name;
-            rarityBadge.className = `rarity-badge ${rarityData.class}`;
-          }
+            const rarityData = getRarity(metrics.uniqueEmojis, metrics.averageRating, false);
+            if (rarityData.name === 'Обычное') {
+              rarityBadge.style.display = 'none';
+            } else {
+              rarityBadge.style.display = '';
+              rarityBadge.textContent = rarityData.name;
+              rarityBadge.className = `rarity-badge ${rarityData.class}`;
+            }
+          });
         });
       } else if (metrics.uniqueEmojis === 2) {
         // Два одинаковых и один отличный
@@ -1171,7 +1238,6 @@
           mainEmoji = obj1;
           extraEmoji = obj0;
         }
-        // Новая формула: "Очень {mainEmoji.moodParts[0]} — {extraEmoji.moodParts[2]}"
         let first = mainEmoji.moodParts[0].replace(/\s+/g, '');
         let second = extraEmoji.moodParts[2].replace(/\s+/g, '');
         first = first.charAt(0).toUpperCase() + first.slice(1);
@@ -1179,38 +1245,39 @@
         moodPhrase = `Очень ${first} — ${second}`;
         const uniqueEmojisArr = Array.from(new Set(arr));
         const emojiString = uniqueEmojisArr.join('_');
-        const apiUrl = `https://emojik.vercel.app/s/${encodeURIComponent(emojiString)}?size=64`;
-        // Показываем loader
-        moodEmoji.innerHTML = '<span class="emoji-loader"></span>';
-        fetch(apiUrl).then(resp => {
-          if (resp.ok) {
-            isEpicApi = true;
-            moodEmoji.innerHTML = `<img src='${apiUrl}' alt='${emojiString}' class='emoji-fusion' style='width:64px;height:64px;vertical-align:middle;'>`;
-            const img = moodEmoji.querySelector('img');
-            img.addEventListener('animationend', () => {
-              img.classList.remove('emoji-fusion');
-            });
-          } else {
+        const apiUrl = `https://emojik.vercel.app/s/${encodeURIComponent(emojiString)}?size=44`;
+        // Показываем fusion loader
+        playFusionLoader(uniqueEmojisArr[0], uniqueEmojisArr[1], () => {
+          fetch(apiUrl).then(resp => {
+            if (resp.ok) {
+              isEpicApi = true;
+              moodEmoji.innerHTML = `<img src='${apiUrl}' alt='${emojiString}' class='emoji-fusion' style='width:64px;height:64px;vertical-align:middle;'>`;
+              const img = moodEmoji.querySelector('img');
+              img.addEventListener('animationend', () => {
+                img.classList.remove('emoji-fusion');
+              });
+            } else {
+              moodEmoji.textContent = moodLevelData.emoji;
+            }
+            const rarityData = getRarity(metrics.uniqueEmojis, metrics.averageRating, resp.ok);
+            if (rarityData.name === 'Обычное') {
+              rarityBadge.style.display = 'none';
+            } else {
+              rarityBadge.style.display = '';
+              rarityBadge.textContent = rarityData.name;
+              rarityBadge.className = `rarity-badge ${rarityData.class}`;
+            }
+          }).catch(() => {
             moodEmoji.textContent = moodLevelData.emoji;
-          }
-          const rarityData = getRarity(metrics.uniqueEmojis, metrics.averageRating, resp.ok);
-          if (rarityData.name === 'Обычное') {
-            rarityBadge.style.display = 'none';
-          } else {
-            rarityBadge.style.display = '';
-            rarityBadge.textContent = rarityData.name;
-            rarityBadge.className = `rarity-badge ${rarityData.class}`;
-          }
-        }).catch(() => {
-          moodEmoji.textContent = moodLevelData.emoji;
-          const rarityData = getRarity(metrics.uniqueEmojis, metrics.averageRating, false);
-          if (rarityData.name === 'Обычное') {
-            rarityBadge.style.display = 'none';
-          } else {
-            rarityBadge.style.display = '';
-            rarityBadge.textContent = rarityData.name;
-            rarityBadge.className = `rarity-badge ${rarityData.class}`;
-          }
+            const rarityData = getRarity(metrics.uniqueEmojis, metrics.averageRating, false);
+            if (rarityData.name === 'Обычное') {
+              rarityBadge.style.display = 'none';
+            } else {
+              rarityBadge.style.display = '';
+              rarityBadge.textContent = rarityData.name;
+              rarityBadge.className = `rarity-badge ${rarityData.class}`;
+            }
+          });
         });
       } else {
         // Три разных
@@ -1294,7 +1361,21 @@
       }
     }
 
-    // Инициализация: установка фонов для слотов
+    // Показывает анимацию слияния двух emoji (или emoji+👑) в moodEmoji
+function playFusionLoader(emoji1, emoji2, callback) {
+  moodEmoji.innerHTML =
+    `<span class=\"emoji-fusion-loader\">
+      <span class=\"fusion-emoji left\">${emoji1}</span>
+      <span class=\"fusion-emoji right\">${emoji2}</span>
+      <span class=\"fusion-magic\"></span>
+    </span>`;
+  // После анимации "магии" (0.7s), вызываем callback
+  setTimeout(() => {
+    if (typeof callback === 'function') callback();
+  }, 850);
+}
+
+// Инициализация: установка фонов для слотов
     slotEls.forEach(slot => {
       setSlotBackground(slot, slot.textContent);
     });
