--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
       opacity: 0;
       pointer-events: none;
       box-shadow: 0 0 24px 8px #ffe066, 0 0 60px 20px #fffbe6;
-      animation: fusion-magic-flash 0.55s 0.45s cubic-bezier(.7,2,.1,1) forwards;
+      animation: fusion-magic-flash 2.55s .45s cubic-bezier(.7,2,.1,1) forwards;
       z-index: 2;
     }
     @keyframes fusion-magic-flash {
