--- a/index.html
+++ b/index.html
@@ -5,6 +5,29 @@
   <title>Генератор настроения</title>
   <!-- Для мобильных устройств: -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+<!-- Мета-теги для SEO и соцсетей -->
+  <meta name="description" content="Эмоциональный триптих: загадочное сочетание чувств">
+  <meta name="author" content="Webyt">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://mood.webyt.ru/">
+  <meta property="og:title" content=">Генератор настроения - Настроенеметр">
+  <meta property="og:description" content="Эмоциональный триптих: загадочное сочетание чувств">
+  <meta property="og:image" content="https://mood.webyt.ru/img/crystals.jpg">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://mood.webyt.ru/">
+  <meta property="twitter:title" content=">Генератор настроения - Настроенеметр">
+  <meta property="twitter:description" content="Эмоциональный триптих: загадочное сочетание чувств">
+  <meta property="twitter:image" content="https://mood.webyt.ru/img/crystals.jpg">
+
+  <!-- Временная фавиконка (замените когда будет своя) -->
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>💎</text></svg>">
+
+  
   <style>
     /* Основные стили для body и фона */
     body {
