--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <meta property="twitter:image" content="https://mood.webyt.ru/img/crystals.jpg">
 
   <!-- Временная фавиконка (замените когда будет своя) -->
-  <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>💎</text></svg>">
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🤔</text></svg>">
 
   
   <style>
